src/blocks/accordion/style.scss
.pb-accordion-wrapper {
	transition: all 0.3s ease-in-out;
	position: relative;
	.pb-accordion-item {
		.pb-accordion-header {
			display: flex;
			align-items: center;
			justify-content: space-between;
			cursor: pointer;
			// &.pb-active {
			// 	.pb-accordion-toggle-icon--open {
			// 		display: none;
			// 	}
			// 	.pb-accordion-toggle-icon--close {
			// 		display: block !important;
			// 	}
			// }
			.pb-accordion-icon {
				margin: 0 10px 0 0px;

			}
			.pb-accordion-title {
				flex-grow: 1;
			}
			.pb-accordion-toggle-icon {
				// margin-right: 10px;
				.pb-accordion-toggle-icon--close {
					// display: none;
				}
			}
		}
		.pb-accordion-content {
			display: none;
			&.pb-active {
				display: block;
			}
		}
	}
}

